cleanup some ticket info

--- a/hoverboard/data/hoverboard.config.json
+++ b/hoverboard/data/hoverboard.config.json
@@ -130,6 +130,7 @@
         "currency": "USD",
         "starts": "lazy-ticket-starts",
         "ends": "lazy-ticket-ends",
+        "info": "lazy-ticket-info",
         "soldOut": false
       }
     ]
