--- a/hoverboard/data/hoverboard.config.json
+++ b/hoverboard/data/hoverboard.config.json
@@ -122,7 +122,7 @@
         "starts": "mid-morning-starts",
         "ends": "mid-morning-ends",
         "info": "mid-morning-info",
-        "soldOut": false
+        "soldOut": true
       },
       {
         "name": "lazy-ticket",
